--- a/EDA/eda.ipynb
+++ b/EDA/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,8 @@
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier"
    ]
   },
   {
@@ -2183,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2207,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2309,7 +2310,6 @@
     }
    ],
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
     "import seaborn as sns\n",
     "\n",
@@ -4511,7 +4511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -4821,6 +4821,127 @@
     "print('Classification Report:')\n",
     "print(class_report_gmm)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bag 1 - Cross-Validation Accuracy: 0.77 (+/- 0.03)\n",
+      "Bag 1 - Test Accuracy: 0.86\n",
+      "Bag 1 - Confusion Matrix:\n",
+      "[[79  8 11]\n",
+      " [ 9 95  5]\n",
+      " [ 9  3 98]]\n",
+      "\n",
+      "Bag 2 - Cross-Validation Accuracy: 0.77 (+/- 0.03)\n",
+      "Bag 2 - Test Accuracy: 0.86\n",
+      "Bag 2 - Confusion Matrix:\n",
+      "[[79  8 11]\n",
+      " [ 9 95  5]\n",
+      " [ 9  3 98]]\n",
+      "\n",
+      "Bag 3 - Cross-Validation Accuracy: 0.77 (+/- 0.03)\n",
+      "Bag 3 - Test Accuracy: 0.86\n",
+      "Bag 3 - Confusion Matrix:\n",
+      "[[79  8 11]\n",
+      " [ 9 95  5]\n",
+      " [ 9  3 98]]\n",
+      "\n",
+      "Bag 4 - Cross-Validation Accuracy: 0.77 (+/- 0.03)\n",
+      "Bag 4 - Test Accuracy: 0.86\n",
+      "Bag 4 - Confusion Matrix:\n",
+      "[[79  8 11]\n",
+      " [ 9 95  5]\n",
+      " [ 9  3 98]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "\n",
+    "class BaggedMLModel:\n",
+    "    def __init__(self, n_bags=5, model=None):\n",
+    "        self.n_bags = n_bags\n",
+    "        self.model = model or DecisionTreeClassifier(random_state=42, min_samples_split=10, min_samples_leaf=1)\n",
+    "        self.scalers = []  # To store scalers for each bag\n",
+    "        self.bags = []  # To store data splits for each bag\n",
+    "\n",
+    "    def create_bagged_data(self, df, target_column):\n",
+    "        \"\"\"Creates bagged datasets from the provided DataFrame.\"\"\"\n",
+    "        for _ in range(self.n_bags):\n",
+    "            bag = df.sample(frac=1, replace=True, random_state=42)\n",
+    "\n",
+    "            x = bag.drop(columns=[target_column])\n",
+    "            y = bag[target_column]\n",
+    "\n",
+    "            x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "            scaler = StandardScaler()\n",
+    "            x_train_scaled = scaler.fit_transform(x_train)\n",
+    "            x_test_scaled = scaler.transform(x_test)\n",
+    "\n",
+    "            self.bags.append({\n",
+    "                'x_train': x_train,\n",
+    "                'x_test': x_test,\n",
+    "                'y_train': y_train,\n",
+    "                'y_test': y_test,\n",
+    "                'x_train_scaled': x_train_scaled,\n",
+    "                'x_test_scaled': x_test_scaled\n",
+    "            })\n",
+    "            self.scalers.append(scaler)\n",
+    "\n",
+    "    def train_and_evaluate(self):\n",
+    "        \"\"\"Trains and evaluates the model for each bag.\"\"\"\n",
+    "        for i, bag in enumerate(self.bags):\n",
+    "            scores = cross_val_score(self.model, bag['x_train_scaled'], bag['y_train'], cv=5)\n",
+    "            print(f\"Bag {i+1} - Cross-Validation Accuracy: {scores.mean():.2f} (+/- {scores.std() * 2:.2f})\")\n",
+    "\n",
+    "            self.model.fit(bag['x_train_scaled'], bag['y_train'])\n",
+    "            y_pred = self.model.predict(bag['x_test_scaled'])\n",
+    "            accuracy = accuracy_score(bag['y_test'], y_pred)\n",
+    "            print(f\"Bag {i+1} - Test Accuracy: {accuracy:.2f}\")\n",
+    "\n",
+    "            cm = confusion_matrix(bag['y_test'], y_pred)\n",
+    "            print(f\"Bag {i+1} - Confusion Matrix:\\n{cm}\\n\")\n",
+    "\n",
+    "    def predict(self, new_data):\n",
+    "        \"\"\"Predicts on new data using the model trained on the last bag.\"\"\"\n",
+    "        if not self.bags:\n",
+    "            raise ValueError(\"No trained model found. Run create_bagged_data and train_and_evaluate first.\")\n",
+    "\n",
+    "        # Use the scaler from the last bag for scaling\n",
+    "        scaler = self.scalers[-1]\n",
+    "        new_data_scaled = scaler.transform(new_data)\n",
+    "        return self.model.predict(new_data_scaled)\n",
+    "\n",
+    "# Usage\n",
+    "df = pd.read_csv('arecanut.csv')  # Load your dataset\n",
+    "model = BaggedMLModel(n_bags=4)\n",
+    "model.create_bagged_data(df, target_column='grade')\n",
+    "model.train_and_evaluate()\n",
+    "\n",
+    "# Predict on new data\n",
+    "# new_data = pd.DataFrame([...])  # Replace with actual data\n",
+    "# predictions = model.predict(new_data)\n",
+    "# print(\"Predictions:\", predictions)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
