--- a/EDA/eda.ipynb
+++ b/EDA/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2184,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2208,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2338,7 +2338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -4446,7 +4446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -4485,7 +4485,7 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "clf = DecisionTreeClassifier(random_state=42, min_samples_split=10, min_samples_leaf=1)\n",
     "\n",
@@ -4500,6 +4500,62 @@
     "    \n",
     "    cm = confusion_matrix(bag['y_test'], y_pred)\n",
     "    print(f\"Bag {i+1} - Confusion Matrix:\\n{cm}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('modeldtree', 'wb') as file:\n",
+    "    pickle.dump(clf, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('modeldtree', 'rb') as file:\n",
+    "    dt= pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 1, 3, 2, 2, 1, 1, 3, 2, 2, 1, 1, 3, 1, 1, 1, 1, 2, 2, 2, 2,\n",
+       "       1, 3, 3, 3, 2, 3, 3, 3, 2, 3, 1, 2, 2, 1, 3, 1, 1, 3, 1, 1, 1, 2,\n",
+       "       3, 2, 3, 3, 2, 2, 2, 3, 3, 1, 2, 2, 3, 3, 3, 2, 1, 1, 3, 2, 1, 3,\n",
+       "       2, 1, 3, 2, 1, 1, 3, 3, 3, 1, 2, 2, 1, 2, 3, 1, 1, 1, 2, 3, 2, 1,\n",
+       "       2, 3, 1, 3, 1, 2, 1, 1, 3, 1, 3, 3, 1, 3, 2, 2, 3, 1, 1, 3, 3, 2,\n",
+       "       3, 2, 1, 3, 2, 3, 3, 1, 3, 3, 1, 2, 1, 3, 1, 3, 1, 3, 2, 3, 2, 1,\n",
+       "       2, 1, 2, 1, 1, 1, 3, 3, 1, 1, 1, 2, 3, 1, 3, 1, 1, 1, 1, 2, 2, 1,\n",
+       "       1, 3, 1, 1, 3, 3, 3, 1, 3, 1, 2, 1, 3, 3, 1, 1, 1, 2, 1, 1, 2, 2,\n",
+       "       3, 2, 2, 1, 2, 3, 2, 3, 1, 1, 2, 2, 2, 3, 3, 2, 3, 2, 1, 1, 1, 3,\n",
+       "       3, 3, 2, 2, 1, 1, 1, 2, 1, 3, 3, 1, 2, 2, 1, 1, 3, 2, 3, 1, 2, 1,\n",
+       "       3, 3, 3, 3, 2, 3, 1, 1, 3, 3, 2, 1, 3, 1, 3, 3, 1, 1, 2, 2, 1, 1,\n",
+       "       2, 3, 3, 3, 3, 3, 3, 1, 1, 2, 2, 1, 1, 2, 3, 1, 2, 2, 2, 2, 1, 1,\n",
+       "       2, 2, 3, 2, 1, 1, 3, 1, 2, 2, 3, 1, 3, 2, 3, 1, 1, 1, 1, 3, 3, 1,\n",
+       "       3, 3, 2, 1, 3, 2, 3, 1, 2, 1, 3, 1, 1, 3, 3, 3, 2, 2, 1, 1, 3, 2,\n",
+       "       1, 3, 1, 2, 2, 2, 3, 3, 3])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.predict(x_test_scaled_df)"
    ]
   },
   {
